[package]
name = "vectorengine-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# Windows:静态链接 MSVC CRT,生成独立 .exe,目标机器无需装 VC++ runtime。
# 默认 Rust 在 Windows 上动态链接 vcruntime140.dll / msvcp140.dll,加了这条后
# 二进制自带运行时,可以拷到任何 Windows 10/11 直接跑。
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]